--- a/index.html
+++ b/index.html
@@ -69,6 +69,13 @@
           <button class="btn btn-restartGame">Rejouer</button>
       </div>
     </div>
+    <div class="modal-defeat">
+      <div class="modal-content-defeat">
+        <h2>Défaite</h2>
+        <p>Dommage...Temps écoulé,vous avez perdu !</p>
+        <button class="btn btn-restartGame">Rejouer</button>
+      </div>
+    </div>
     <main>
       <h3>TEMPS</h3>
       <div class="compteur">
